.ci-logs/build-849c972.log
/home/runner/work/eth0/eth0/eth0/attack_dhcp_starve.cpp: In function 'void dhcpStarveSendDiscover()':
/home/runner/work/eth0/eth0/eth0/attack_dhcp_starve.cpp:47:12: warning: unused variable 'udpStart' [-Wunused-variable]
   uint16_t udpStart = pos;
            ^~~~~~~~
/home/runner/work/eth0/eth0/eth0/attack_dhcp_starve.cpp:58:12: warning: unused variable 'dhcpStart' [-Wunused-variable]
   uint16_t dhcpStart = pos;
            ^~~~~~~~~
/home/runner/work/eth0/eth0/eth0/attack_dhcp_starve.cpp: In function 'void parseDhcpStarveCommand(const char*)':
/home/runner/work/eth0/eth0/eth0/attack_dhcp_starve.cpp:116:5: error: 'idsSetLed' was not declared in this scope
     idsSetLed(COLOR_ORANGE);
     ^~~~~~~~~
/home/runner/work/eth0/eth0/eth0/attack_dhcp_starve.cpp:122:5: error: 'idsSetLed' was not declared in this scope
     idsSetLed(capturing ? COLOR_GREEN : COLOR_BLUE);
     ^~~~~~~~~
/home/runner/work/eth0/eth0/eth0/attack_dns_spoof.cpp: In function 'void dnsSpoofSendResponse(const uint8_t*, uint16_t, const uint8_t*, uint8_t, const uint8_t*)':
/home/runner/work/eth0/eth0/eth0/attack_dns_spoof.cpp:194:12: warning: unused variable 'dnsStart' [-Wunused-variable]
   uint16_t dnsStart = pos;
            ^~~~~~~~
/home/runner/work/eth0/eth0/eth0/attack_nbns_poison.cpp: In function 'void poisonCheckPacket(const uint8_t*, uint16_t)':
/home/runner/work/eth0/eth0/eth0/attack_nbns_poison.cpp:60:5: error: 'dnsDecodeName' was not declared in this scope
     dnsDecodeName(dns, dnsLen, 12, name, sizeof(name));
     ^~~~~~~~~~~~~
/home/runner/work/eth0/eth0/eth0/attack_nbns_poison.cpp:80:14: warning: unused variable 'uStart' [-Wunused-variable]
     uint16_t uStart = pos;
              ^~~~~~

[92mUsed library[0m      [92mVersion[0m [90mPath[0m
[93mAdafruit NeoPixel[0m 1.12.3  [90m/home/runner/Arduino/libraries/Adafruit_NeoPixel[0m
[93mEthernet2[0m         1.0.4   [90m/home/runner/Arduino/libraries/Ethernet2[0m
[93mSPI[0m               2.0.0   [90m/home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.17/libraries/SPI[0m
[93mPreferences[0m       2.0.0   [90m/home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.17/libraries/Preferences[0m
[93mSD[0m                2.0.0   [90m/home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.17/libraries/SD[0m
[93mFS[0m                2.0.0   [90m/home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.17/libraries/FS[0m

[92mUsed platform[0m [92mVersion[0m [90mPath[0m
[93mesp32:esp32[0m   2.0.17  [90m/home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.17[0m
Error during build: exit status 1
